# OMM

./: .gitignore  check_init.sh  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: android-build.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/android_build_20251230/: plan.md
conductor/archive/android_saf_20251230/: metadata.json  plan.md  (+1 more)
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/saf/: Cargo.toml  README.md  package.json
src-tauri/plugins/saf/android/: build.gradle.kts
src-tauri/plugins/saf/android/src/androidTest/java/: ExampleInstrumentedTest.kt
src-tauri/plugins/saf/android/src/main/java/: SafImplementation.kt  SafPlugin.kt
src-tauri/plugins/saf/android/src/test/java/: ExampleUnitTest.kt
src-tauri/plugins/saf/examples/tauri-app/: package.json
src-tauri/plugins/saf/examples/tauri-app/src/: App.svelte
src-tauri/plugins/saf/examples/tauri-app/src-tauri/: Cargo.toml
src-tauri/plugins/saf/examples/tauri-app/src-tauri/capabilities/: default.json
src-tauri/plugins/saf/examples/tauri-app/src-tauri/src/: lib.rs
src-tauri/plugins/saf/guest-js/: index.ts
src-tauri/plugins/saf/permissions/: default.toml  permissions.toml
src-tauri/plugins/saf/permissions/autogenerated/: reference.md
src-tauri/plugins/saf/permissions/schemas/: schema.json
src-tauri/plugins/saf/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: commands.rs  config.rs  db.rs  download.rs  lib.rs  main.rs  nexus.rs
src/lib/: download.svelte.ts  mods.ts  nexus.ts
src/routes/: +layout.svelte  +page.svelte
tests/: mods.test.ts  page_storage.test.ts  render.test.ts  shadcn.test.ts  smoke.test.ts
(+38 files in other folders)
