[package]
name = "tes-modloader"
version = "0.1.0"
description = "OpenMW Android Modloader"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
panic = "abort" # Strip expensive panic messages.
codegen-units = 1 # Compile crates one after another so the compiler can optimize better.
lto = true # Enables link time optimizations.
opt-level = "s" # Optimize for binary size.
strip = true # Remove debug symbols.

[dev-dependencies]
tempfile = "3.24.0"
