[package]
name = "openmodloader"
version = "0.1.0"
description = "Open Modloader"
authors = ["you"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-saf = { path = "plugins/saf" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
futures-util = "0.3"

[profile.release]
panic = "abort" # Strip expensive panic messages.
codegen-units = 1 # Compile crates one after another so the compiler can optimize better.
lto = true # Enables link time optimizations.
opt-level = "s" # Optimize for binary size.
strip = true # Remove debug symbols.

[dev-dependencies]
tempfile = "3.24.0"
